<?xml version="1.0" encoding="utf-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" 
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.apache.lucene</groupId>
    <artifactId>lucene</artifactId>
    <version>3.6.0</version>
    <name>Apache Lucene</name>
    <packaging>pom</packaging>
    <properties>
        <lucene.version>3.6</lucene.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>    
    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>2.3.2</version>
                    <configuration>
                        <source>1.6</source>
                        <target>1.6</target>
                        <encoding>UTF-8</encoding>
                        <meminitial>128m</meminitial>
                        <maxmem>512m</maxmem>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-resources-plugin</artifactId>
                    <version>2.5</version>
                    <configuration>
                        <encoding>UTF-8</encoding>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>2.3.1</version>
                    <configuration>
                        <archive>
                        <manifest>
                            <mainClass>org.apache.lucene.LucenePackage</mainClass>
                            <packageName>org.apache.lucene</packageName>
                            <addClasspath>true</addClasspath>
                        </manifest>
                        </archive>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>2.5</version>
                    <configuration>
                        <skip>false</skip>
                        <forkMode>once</forkMode>
                        <childDelegation>false</childDelegation>
                        <reportFormat>plain</reportFormat>
                        <disableXmlReport>true</disableXmlReport>
                        <excludes>
                            <exclude>**/*$*</exclude>
                        </excludes>
                        <systemPropertyVariables>
                            <java.util.logging.config.file>src/test/resources/logging.properties</java.util.logging.config.file>
                            <java.io.tmpdir>${project.build.directory}</java.io.tmpdir>
                            <lucene.version>${lucene.version}</lucene.version>
                            <file.encoding>UTF-8</file.encoding>
                            <tempDir>${project.build.directory}</tempDir>
                            <testmethod></testmethod>
                            <jetty.testMode>1</jetty.testMode>
                            <tests.verbose>false</tests.verbose>
                            <tests.locale>random</tests.locale>
                            <tests.timezone>random</tests.timezone>
                            <tests.directory>random</tests.directory>
                            <tests.linedocsfile>src/test/resources/org/apache/lucene/util/europarl.lines.txt.gz</tests.linedocsfile>
                            <tests.iter>1</tests.iter>
                            <tests.iter.min>1</tests.iter.min>
                            <tests.seed>random</tests.seed>
                            <tests.luceneMatchVersion>${lucene.version}</tests.luceneMatchVersion>
                            <tests.cleanthreads>perMethod</tests.cleanthreads>
                            <tests.nightly>false</tests.nightly>
                            <tests.multiplier>1</tests.multiplier>
                        </systemPropertyVariables>
                        <argLine>-Xmx512m -Xms256m -XX:PermSize=512m -XX:MaxPermSize=512m</argLine>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>cobertura-maven-plugin</artifactId>
                    <version>2.5</version>
                    <configuration>
                        <formats>
                            <format>xml</format>
                        </formats>
                        <instrumentation>
                            <excludes>
                                <exclude>**/*$*</exclude>
                            </excludes>
                        </instrumentation>
                        <check>
                            <haltOnFailure>false</haltOnFailure>
                        </check>
                    </configuration>
                    <executions>
                        <execution>
                            <phase>package</phase>
                            <goals>
                                <goal>cobertura</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                  <groupId>org.codehaus.mojo</groupId>
                  <artifactId>sonar-maven-plugin</artifactId>
                  <version>2.0-beta-2</version>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
            </plugin>
            <plugin>
                <artifactId>maven-resources-plugin</artifactId>
            </plugin>
            <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
            </plugin>
        </plugins>
    </build>
    <modules>
        <module>lucene-core</module>
        <module>lucene-test-framework</module>
        <module>lucene-core-test</module>
        <module>lucene-analyzers-common</module>
        <module>lucene-analyzers-smartcn</module>
        <module>lucene-analyzers-stempel</module>
        <module>lucene-analyzers-phonetic</module>
        <module>lucene-analyzers-kuromoji</module>
        <module>lucene-facet</module>
        <module>lucene-grouping</module>
        <module>lucene-highlighter</module>
        <module>lucene-icu</module>
        <module>lucene-instantiated</module>
        <module>lucene-join</module>
        <module>lucene-memory</module>
        <module>lucene-misc</module>
        <module>lucene-queries</module>
        <module>lucene-queryparser</module>
        <module>lucene-remote</module>
        <module>lucene-spatial</module>
        <module>lucene-spellchecker</module>
        <module>lucene-tools</module>
        <module>lucene-xml-query-parser</module>
    </modules>
    <profiles>
        <profile>
            <id>with-sonar</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <properties>
                <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
                <!-- beware - Lucene uses 4-byte UTF-8 in source, requires mysql-connector-java-5.1.16 -->
                <sonar.jdbc.url>jdbc:mysql://localhost:3306/sonar?useUnicode=true&amp;characterEncoding=utf8mb4</sonar.jdbc.url>
                <sonar.jdbc.driver>com.mysql.jdbc.Driver</sonar.jdbc.driver>
                <sonar.jdbc.username>sonar</sonar.jdbc.username>
                <sonar.jdbc.password>sonar</sonar.jdbc.password>
                <sonar.host.url>http://demeter.hbz-nrw.de/sonar</sonar.host.url>
                <sonar.profile>Sonar way with Findbugs</sonar.profile>
            </properties>
        </profile>
        <profile>
            <id>with-cobertura</id>
            <activation>
                <activeByDefault>false</activeByDefault>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>cobertura-maven-plugin</artifactId>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>
